--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 asgiref==3.3.1
 atomicwrites==1.4.0
 attrs==20.3.0
+autopep8==1.5.6
+certifi==2019.9.11
+chardet==3.0.4
 colorama==0.4.4
-Django==3.1.7
+Django==3.2
 django-autoslug==1.9.8
 django-eml-email-backend==0.1
 django-widget-tweaks==1.4.8
@@ -11,9 +14,12 @@ flake8-django==1.1.1
 fpdf==1.7.2
 google-images-download==2.8.0
 gunicorn==20.0.4
+idna==2.8
+importlib-metadata==1.5.0
 iniconfig==1.1.1
 isort==5.7.0
 mccabe==0.6.1
+more-itertools==8.2.0
 packaging==20.9
 Pillow==8.1.2
 pluggy==0.13.1
@@ -23,9 +29,15 @@ pycodestyle==2.6.0
 pyflakes==2.2.0
 pyparsing==2.4.7
 pytest==6.2.2
+pytest-django==3.8.0
 pytz==2021.1
 reportlab==3.5.65
+requests==2.22.0
 selenium==3.141.0
+six==1.14.0
+sorl-thumbnail==12.6.3
 sqlparse==0.4.1
 toml==0.10.2
 urllib3==1.26.3
+wcwidth==0.1.8
+zipp==2.2.0
