--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ colorama==0.4.4
 Django==3.2
 django-autoslug==1.9.8
 django-eml-email-backend==0.1
+django-environ==0.4.5
 django-widget-tweaks==1.4.8
 flake8==3.8.4
 flake8-django==1.1.1
@@ -23,6 +24,7 @@ more-itertools==8.2.0
 packaging==20.9
 Pillow==8.1.2
 pluggy==0.13.1
+psycopg2==2.8.6
 psycopg2-binary==2.8.6
 py==1.10.0
 pycodestyle==2.6.0
@@ -30,6 +32,7 @@ pyflakes==2.2.0
 pyparsing==2.4.7
 pytest==6.2.2
 pytest-django==3.8.0
+python-dotenv==0.17.0
 pytz==2021.1
 reportlab==3.5.65
 requests==2.22.0
