--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
     ports:
       - "80:80"
     volumes:
-      - static://var/html/
+      - static:/var/html/
       - media:/var/html/
       - nginx_conf:/etc/nginx/conf.d/
     depends_on:
